FTDC is calling boost::filesystem without passing an error_code parameter

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.2, v4.0, v3.6, v3.4
    • Security 2019-06-03, Security 2019-06-17
    • 17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      FTDC is making a few calls to boost::filesystem which caused FTDC to throw an exception during shutdown.

      These calls should be updated to use the error_code style. If these apis are called without error_code they throw an exception

            Assignee:
            Mark Benvenuto
            Reporter:
            Mark Benvenuto
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: