SERVER-41148 FTDC is calling boost::filesystem without passing an error_code parameter

(cherry picked from commit d8e2c4748fda6fc24ea0d1bb1541ea9c66f5e1cf)