src/mongo/db/ftdc/file_writer.cpp
@@ -204,7 +204,14 @@ Status FTDCFileWriter::flush(const boost::optional<ConstDataRange>& range, Date_
         }
     }
 
-    boost::filesystem::remove(_interimFile);
+    boost::system::error_code ec;
+    boost::filesystem::remove(_interimFile, ec);
+    if (ec) {
+        return {ErrorCodes::NonExistentPath,
+                str::stream() << "\"" << _interimFile.generic_string()
+                              << "\" could not be removed during flush: "
+                              << ec.message()};
+    }
 
     return Status::OK();
 }
